--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="ball.js"></script>
     <script src="player.js"></script>
     <script src="ai.js"></script>
+    <script src="neuralai.js"></script>
   </head>
   <body>
   </body>
