ga implementation halfway done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="player.js"></script>
     <script src="ai.js"></script>
     <script src="neuralai.js"></script>
+    <script src="population.js"></script>
   </head>
   <body>
   </body>
